# python-project-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
app/: utils.py
tests/: test_utils.py
