[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "A template for Python projects with linter/formatter configuration"
authors = ["staticf0x <44530786+staticf0x@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
tox-poetry = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
